commit calculator all changes

--- a/Task2/src/main/resources/application.properties
+++ b/Task2/src/main/resources/application.properties
@@ -1,1 +1,31 @@
 
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+
+logging.level.root=INFO
+logging.level.com.controller.CalculatorController=DEBUG
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+# Console  configuration
+logging.level.org.springframework=INFO
+logging.level.org.hibernate=ERROR
+logging.level.com=DEBUG
+
+# Console  settings
+logging.pattern.console=%d{HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n
+
+springfox.documentation.swagger-ui.enabled=true
+
+#Redis
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.cache.type=redis
+spring.cache.redis.time-to-live=1h
+ 
+spring.main.allow-bean-definition-overriding=true
